ajax library switch to axios

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.0",
     "fastclick": "^1.0.6",
-    "jquery": "^3.2.1",
+    "qs": "^6.4.0",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
     "vuex": "^2.1.1",
